--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ intellij {
     pluginName 'Liferay IntelliJ Plugin'
     plugins = [
             'JavaScriptLanguage', 'Tomcat', 'Velocity', 'FreeMarker', 'maven', 'properties', 'java-i18n', 'CSS', 'sass', 'JavaEE', 'jsp', 'gradle', 'de.dm.intellij.maven-archetypes-catalog-plugin:1.2.5',
-            'IntelliLang',
+            'IntelliLang', 'uml',
             //test only?
             'Groovy', 'junit', 'PersistenceSupport', 'DatabaseTools'
     ]
