--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -32,6 +32,7 @@
             <li>Bugfix: Fixed compatibility with IntelliJ 2018.3 when injecting javascript into freemarker taglibs</li>
             <li>Bugfix: ServiceLocator lookup in Application Display Templates was not working properly</li>
             <li>Feature: Code completion for portlet names in JSP taglibs</li>
+            <li>Feature: Code completion for action/render/resource commands in JSP taglibs</li>
             <li>Feature: Support for multiple OSGi service definitions in a @Component annotation</li>
             <li>Feature: Inspections for service.xml</li>
         </ul>
