Feature: Quick Documentation lookup for Journal Structure variables in Freemarker templates

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -36,6 +36,7 @@
             <li>Feature: Support for multiple OSGi service definitions in a @Component annotation</li>
             <li>Feature: Inspections for service.xml</li>
             <li>Feature: Class Name completion for objectUtil in Freemarker templates</li>
+            <li>Feature: Quick Documentation lookup for Journal Structure variables in Freemarker templates</li>
         </ul>
         <p>Version 0.0.3</p>
         <ul>
