--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -28,6 +28,7 @@
         <p>Version 0.0.5</p>
         <ul>
             <li>Feature: Experimental Freemarker debugger</li>
+            <li>Bugfix: JavaScript Support for aui:validator of type "required"</li>
         </ul>
         <p>Version 0.0.4</p>
         <ul>
