--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,8 @@ dependencies {
 intellij {
 //    version "IU-2017.3.4"
 //    version "IU-2018.1.1"
-    version "IU-2018.3.4"
+//    version "IU-2018.3.4"
+    version "IU-2019.1.1"
     type 'IU'
     pluginName 'Liferay IntelliJ Plugin'
     plugins = [
