Bugfix: Fixed compatibility with IntelliJ 2019.1.x Bugfix: Fixed code completion for implicit Groovy variables

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -31,6 +31,8 @@
             <li>Feature: Additional service.xml inspections (primary key, uuid)</li>
             <li>Bugfix: JavaScript Support for aui:validator of type "required"</li>
             <li>Bugfix: Resolve Portlet Names from constant in a class from the same package as the portlet class</li>
+            <li>Bugfix: Fixed compatibility with IntelliJ 2019.1.x</li>
+            <li>Bugfix: Fixed code completion for implicit Groovy variables</li>
         </ul>
         <p>Version 0.0.4</p>
         <ul>
