--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -106,9 +106,11 @@
     <extensions defaultExtensionNs="com.intellij">
         <!-- Define a new filetype for "bnd.bnd" files -->
         <fileTypeFactory implementation="de.dm.intellij.bndtools.BndFileTypeFactory"/>
-        <annotator language="Manifest" implementationClass="de.dm.intellij.bndtools.OsgiManifestHighlightingAnnotator"/>
+        <lang.parserDefinition language="bnd" implementationClass="de.dm.intellij.bndtools.parser.BndParserDefinition"/>
+        <lang.syntaxHighlighterFactory language="bnd" implementationClass="org.jetbrains.lang.manifest.highlighting.ManifestSyntaxHighlighterFactory"/>
+        <annotator language="bnd" implementationClass="de.dm.intellij.bndtools.OsgiManifestHighlightingAnnotator"/>
         <manifest.parser.provider implementation="de.dm.intellij.bndtools.parser.OsgiManifestHeaderParsers"/>
-        <completion.contributor language="Manifest" implementationClass="de.dm.intellij.bndtools.completion.OsgiManifestCompletionContributor"/>
+        <completion.contributor language="bnd" implementationClass="de.dm.intellij.bndtools.completion.OsgiManifestCompletionContributor"/>
 
         <!-- Completion Contribution for @Component annotation -->
         <completion.contributor order="first, before propertiesCompletion" language="JAVA" implementationClass="de.dm.intellij.liferay.language.osgi.ComponentPropertiesCompletionContributor"/>
