--- a/src/main/resources/ComponentPropertiesDocumentationBundle.properties
+++ b/src/main/resources/ComponentPropertiesDocumentationBundle.properties
@@ -1,3 +1,5 @@
+javax.portlet.Portlet.javax.portlet.async-supported=If set to 'true', the portlet will support \
+    asynchronous processing in resource requests.
 javax.portlet.Portlet.javax.portlet.description=The description element is used to provide text describing the \
     parent element. The description element should include any \
     information that the portlet application war file producer wants \
