--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -108,11 +108,13 @@
         <!-- Define a new filetype for "bnd.bnd" files -->
         <fileTypeFactory implementation="de.dm.intellij.bndtools.BndFileTypeFactory"/>
         <lang.parserDefinition language="bnd" implementationClass="de.dm.intellij.bndtools.parser.BndParserDefinition"/>
-        <lang.syntaxHighlighterFactory language="bnd" implementationClass="org.jetbrains.lang.manifest.highlighting.ManifestSyntaxHighlighterFactory"/>
+        <lang.syntaxHighlighterFactory language="bnd" implementationClass="de.dm.intellij.bndtools.highlighting.BndSyntaxHighlighterFactory"/>
         <annotator language="bnd" implementationClass="de.dm.intellij.bndtools.OsgiManifestHighlightingAnnotator"/>
         <manifest.parser.provider implementation="de.dm.intellij.bndtools.parser.OsgiManifestHeaderParsers"/>
         <completion.contributor language="bnd" implementationClass="de.dm.intellij.bndtools.completion.OsgiManifestCompletionContributor"/>
         <enterHandlerDelegate implementation="de.dm.intellij.bndtools.actions.EnterInBndFileHandler"/>
+        <lang.elementManipulator forClass="de.dm.intellij.bndtools.psi.BndHeaderValuePart"
+                                 implementationClass="de.dm.intellij.bndtools.psi.impl.BndHeaderValuePartManipulator"/>
 
         <!-- Completion Contribution for @Component annotation -->
         <completion.contributor order="first, before propertiesCompletion" language="JAVA" implementationClass="de.dm.intellij.liferay.language.osgi.ComponentPropertiesCompletionContributor"/>
