--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -32,6 +32,9 @@
             <li>Feature: Improved code completions to support Portlet 3.0 Specification</li>
             <li>Feature: Added support for Liferay 7.2</li>
             <li>Bugfix: Fixed parsing of invalid pom.xml</li>
+            <li>Bugfix: Fixed non-idempotent computation error message</li>
+            <li>Bugfix: Detecting the bundles directory for gradle projects</li>
+            <li>Change: Updated compatibility to IntelliJ 2019.2</li>
         </ul>
         <p>Version 0.0.5</p>
         <ul>
@@ -94,6 +97,7 @@
 
     <depends>org.jetbrains.idea.maven</depends>
     <depends>org.jetbrains.plugins.gradle</depends>
+    <depends>com.intellij.modules.java</depends>
     <depends optional="true" config-file="javascript.xml">JavaScript</depends>
     <depends optional="true" config-file="javaee.xml">com.intellij.javaee</depends>
     <depends optional="true" config-file="jsp.xml">com.intellij.jsp</depends>
