--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -25,6 +25,10 @@
       ]]></description>
 
     <change-notes><![CDATA[
+        <p>Version 0.0.7</p>
+        <ul>
+            <li>Feature: Updated taglib support for Liferay 7.1 and 7.2</li>
+        </ul>
         <p>Version 0.0.6</p>
         <ul>
             <li>Feature: File References for portlet.properties files</li>
