--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -30,6 +30,7 @@
             <li>Feature: Updated taglib support for Liferay 7.1 and 7.2</li>
             <li>Feature: Inspections for wrongly nested Liferay tags inside JSPs</li>
             <li>Feature: resolve _SERVLET_CONTEXT_ based imports in Freemarker templates from external dependencies, too.</li>
+            <li>Bugfix: Performance issues resolving JSPs from Custom JSP Bags</li>
         </ul>
         <p>Version 0.0.6</p>
         <ul>
