--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -2,7 +2,7 @@
     <id>de.dm.intellij.liferay</id>
     <name>Liferay</name>
     <category>Framework integration</category>
-    <version>0.0.8</version>
+    <version>0.0.9</version>
 
     <vendor email="Dominik.Marks@gmx.de" url="https://github.com/dmarks2">Dominik Marks</vendor>
 
@@ -25,6 +25,10 @@
       ]]></description>
 
     <change-notes><![CDATA[
+        <p>Version 0.0.9</p>
+        <ul>
+            <li>Bugfix: Bugfix renaming packages inside bnd.bnd files</li>
+        </ul>
         <p>Version 0.0.8</p>
         <ul>
             <li>Bugfix: Bugfix detecting a wrong version number in the Bundle-Version instruction inside the bnd.bnd file.</li>
@@ -128,7 +132,7 @@
         <fileTypeFactory implementation="de.dm.intellij.bndtools.BndFileTypeFactory"/>
         <lang.parserDefinition language="bnd" implementationClass="de.dm.intellij.bndtools.parser.BndParserDefinition"/>
         <lang.syntaxHighlighterFactory language="bnd" implementationClass="de.dm.intellij.bndtools.highlighting.BndSyntaxHighlighterFactory"/>
-        <annotator language="bnd" implementationClass="de.dm.intellij.bndtools.OsgiManifestHighlightingAnnotator"/>
+        <annotator language="bnd" implementationClass="de.dm.intellij.bndtools.BndHighlightingAnnotator"/>
         <completion.contributor language="bnd" implementationClass="de.dm.intellij.bndtools.completion.BndCompletionContributor"/>
         <enterHandlerDelegate implementation="de.dm.intellij.bndtools.actions.EnterInBndFileHandler"/>
         <lang.elementManipulator forClass="de.dm.intellij.bndtools.psi.BndHeaderValuePart"
