--- a/build.gradle
+++ b/build.gradle
@@ -243,8 +243,12 @@ task generateLiferayDefinitions {
 
 task generateTaglibDefinitions {
     doLast {
-        def target = new File(generatedResources, "com/liferay/tld");
-        target.mkdirs();
+        def target70 = new File(generatedResources, "com/liferay/tld/70");
+        def target71 = new File(generatedResources, "com/liferay/tld/71");
+        def target72 = new File(generatedResources, "com/liferay/tld/72");
+        target70.mkdirs();
+        target71.mkdirs();
+        target72.mkdirs();
 
         download {
             src([
@@ -267,7 +271,61 @@ task generateTaglibDefinitions {
                     'https://raw.githubusercontent.com/liferay/liferay-portal/7.0.x/modules/apps/foundation/frontend-taglib/frontend-taglib/src/main/resources/META-INF/liferay-frontend.tld',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/7.0.x/modules/apps/web-experience/trash/trash-taglib/src/main/resources/META-INF/liferay-trash.tld'
             ])
-            dest target
+            dest target70
+            acceptAnyCertificate true
+            overwrite true
+            onlyIfNewer true
+        }
+
+        download {
+            src([
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.1.x/util-taglib/src/META-INF/liferay-aui.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.1.x/util-taglib/src/META-INF/liferay-portlet-ext.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.1.x/util-taglib/src/META-INF/liferay-portlet.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.1.x/util-taglib/src/META-INF/liferay-security.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.1.x/util-taglib/src/META-INF/liferay-theme.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.1.x/util-taglib/src/META-INF/liferay-ui.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.1.x/util-taglib/src/META-INF/liferay-util.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.1.x/modules/apps/product-navigation/product-navigation-taglib/src/main/resources/META-INF/liferay-product-navigation.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.1.x/modules/apps/journal/journal-taglib/src/main/resources/META-INF/liferay-journal.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.1.x/modules/apps/flags/flags-taglib/src/main/resources/META-INF/liferay-flags.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.1.x/modules/apps/layout/layout-taglib/src/main/resources/META-INF/liferay-layout.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.1.x/modules/apps/site-navigation/site-navigation-taglib/src/main/resources/META-INF/liferay-site-navigation.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.1.x/modules/apps/asset/asset-taglib/src/main/resources/META-INF/liferay-asset.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.1.x/modules/apps/map/map-taglib/src/main/resources/META-INF/liferay-map.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.1.x/modules/apps/item-selector/item-selector-taglib/src/main/resources/META-INF/liferay-item-selector.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.1.x/modules/apps/expando/expando-taglib/src/main/resources/META-INF/liferay-expando.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.1.x/modules/apps/frontend-taglib/frontend-taglib/src/main/resources/META-INF/liferay-frontend.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.1.x/modules/apps/trash/trash-taglib/src/main/resources/META-INF/liferay-trash.tld'
+            ])
+            dest target71
+            acceptAnyCertificate true
+            overwrite true
+            onlyIfNewer true
+        }
+
+        download {
+            src([
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.2.x/util-taglib/src/META-INF/liferay-aui.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.2.x/util-taglib/src/META-INF/liferay-portlet-ext.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.2.x/util-taglib/src/META-INF/liferay-portlet.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.2.x/util-taglib/src/META-INF/liferay-security.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.2.x/util-taglib/src/META-INF/liferay-theme.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.2.x/util-taglib/src/META-INF/liferay-ui.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.2.x/util-taglib/src/META-INF/liferay-util.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.2.x/modules/apps/product-navigation/product-navigation-taglib/src/main/resources/META-INF/liferay-product-navigation.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.2.x/modules/apps/journal/journal-taglib/src/main/resources/META-INF/liferay-journal.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.2.x/modules/apps/flags/flags-taglib/src/main/resources/META-INF/liferay-flags.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.2.x/modules/apps/layout/layout-taglib/src/main/resources/META-INF/liferay-layout.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.2.x/modules/apps/site-navigation/site-navigation-taglib/src/main/resources/META-INF/liferay-site-navigation.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.2.x/modules/apps/asset/asset-taglib/src/main/resources/META-INF/liferay-asset.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.2.x/modules/apps/map/map-taglib/src/main/resources/META-INF/liferay-map.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.2.x/modules/apps/item-selector/item-selector-taglib/src/main/resources/META-INF/liferay-item-selector.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.2.x/modules/apps/expando/expando-taglib/src/main/resources/META-INF/liferay-expando.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.2.x/modules/apps/frontend-taglib/frontend-taglib/src/main/resources/META-INF/liferay-frontend.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.2.x/modules/apps/trash/trash-taglib/src/main/resources/META-INF/liferay-trash.tld'
+            ])
+            dest target72
             acceptAnyCertificate true
             overwrite true
             onlyIfNewer true
@@ -322,4 +380,4 @@ task unzipCompass0122SassExtensions(dependsOn: downloadCompass0122, type: Copy) 
 */
 
 group 'de.dm.intellij.liferay'
-version '0.0.8'
+version '0.0.9'
