--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -27,7 +27,9 @@
     <change-notes><![CDATA[
         <p>Version 0.0.9</p>
         <ul>
+            <li>Feature: Added Liferay taglib support for Liferay 7.1 and 7.2 in Freemarker templates</li>
             <li>Bugfix: Bugfix renaming packages inside bnd.bnd files</li>
+            <li>Bugfix: Detecting the Liferay version not working correctly in submodules</li>
         </ul>
         <p>Version 0.0.8</p>
         <ul>
