--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -28,6 +28,7 @@
         <p>Version 0.0.9</p>
         <ul>
             <li>Feature: Added Liferay taglib support for Liferay 7.1 and 7.2 in Freemarker templates</li>
+            <li>Feature: Added additional component properties for Liferay 7.1. and 7.2</li>
             <li>Bugfix: Bugfix renaming packages inside bnd.bnd files</li>
             <li>Bugfix: Detecting the Liferay version not working correctly in submodules</li>
         </ul>
