Feature: Added generic support for Liferay 7.3

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -30,6 +30,7 @@
             <li>Feature: Added Liferay taglib support for Liferay 7.1 and 7.2 in Freemarker templates</li>
             <li>Feature: Added additional component properties for Liferay 7.1. and 7.2</li>
             <li>Feature: Live Templates for Application Display Templates and Journal Templates</li>
+            <li>Feature: Added generic support for Liferay 7.3</li>
             <li>Bugfix: Bugfix renaming packages inside bnd.bnd files</li>
             <li>Bugfix: Detecting the Liferay version not working correctly in submodules</li>
         </ul>
