--- a/build.gradle
+++ b/build.gradle
@@ -150,6 +150,13 @@ task generateLiferayTemplateHelperFiles {
             overwrite true
             onlyIfNewer true
         }
+        download {
+            src 'https://raw.githubusercontent.com/liferay/liferay-portal/7.3.0-ga1/modules/apps/portal-template/portal-template-freemarker/src/main/resources/FTL_liferay.ftl'
+            dest new File(targetFtl, "FTL_liferay_73.ftl")
+            acceptAnyCertificate true
+            overwrite true
+            onlyIfNewer true
+        }
     }
 }
 task generateLiferayDefinitions {
@@ -166,70 +173,84 @@ task generateLiferayDefinitions {
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-display_7_0_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-display_7_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-display_7_2_0.dtd',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-display_7_3_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-friendly-url-routes_6_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-friendly-url-routes_6_2_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-friendly-url-routes_7_0_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-friendly-url-routes_7_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-friendly-url-routes_7_2_0.dtd',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-friendly-url-routes_7_3_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-hook_6_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-hook_6_2_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-hook_7_0_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-hook_7_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-hook_7_2_0.dtd',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-hook_7_3_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-layout-templates_6_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-layout-templates_6_2_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-layout-templates_7_0_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-layout-templates_7_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-layout-templates_7_2_0.dtd',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-layout-templates_7_3_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-look-and-feel_6_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-look-and-feel_6_2_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-look-and-feel_7_0_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-look-and-feel_7_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-look-and-feel_7_2_0.dtd',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-look-and-feel_7_3_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-plugin-package_6_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-plugin-package_6_2_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-plugin-package_7_0_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-plugin-package_7_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-plugin-package_7_2_0.dtd',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-plugin-package_7_3_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-plugin-repository_6_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-plugin-repository_6_2_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-plugin-repository_7_0_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-plugin-repository_7_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-plugin-repository_7_2_0.dtd',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-plugin-repository_7_3_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-portlet-app_6_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-portlet-app_6_2_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-portlet-app_7_0_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-portlet-app_7_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-portlet-app_7_2_0.dtd',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-portlet-app_7_3_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-resource-action-mapping_6_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-resource-action-mapping_6_2_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-resource-action-mapping_7_0_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-resource-action-mapping_7_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-resource-action-mapping_7_2_0.dtd',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-resource-action-mapping_7_3_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-service-builder_6_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-service-builder_6_2_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-service-builder_7_0_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-service-builder_7_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-service-builder_7_2_0.dtd',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-service-builder_7_3_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-social_6_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-social_6_2_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-social_7_0_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-social_7_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-social_7_2_0.dtd',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-social_7_3_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-theme-loader_6_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-theme-loader_6_2_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-theme-loader_7_0_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-theme-loader_7_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-theme-loader_7_2_0.dtd',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-theme-loader_7_3_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-user-notification-definitions_6_2_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-user-notification-definitions_7_0_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-user-notification-definitions_7_1_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-user-notification-definitions_7_2_0.dtd',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-user-notification-definitions_7_3_0.dtd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-workflow-definition_6_1_0.xsd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-workflow-definition_6_2_0.xsd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-workflow-definition_7_0_0.xsd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-workflow-definition_7_1_0.xsd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-workflow-definition_7_2_0.xsd',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/liferay-workflow-definition_7_3_0.xsd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/portlet-app_2_0.xsd',
                     'https://raw.githubusercontent.com/liferay/liferay-portal/master/definitions/portlet-app_3_0.xsd'
             ])
@@ -246,9 +267,11 @@ task generateTaglibDefinitions {
         def target70 = new File(generatedResources, "com/liferay/tld/70");
         def target71 = new File(generatedResources, "com/liferay/tld/71");
         def target72 = new File(generatedResources, "com/liferay/tld/72");
+        def target73 = new File(generatedResources, "com/liferay/tld/73");
         target70.mkdirs();
         target71.mkdirs();
         target72.mkdirs();
+        target73.mkdirs();
 
         download {
             src([
@@ -326,6 +349,33 @@ task generateTaglibDefinitions {
                     'https://raw.githubusercontent.com/liferay/liferay-portal/7.2.x/modules/apps/trash/trash-taglib/src/main/resources/META-INF/liferay-trash.tld'
             ])
             dest target72
+            acceptAnyCertificate true
+            overwrite true
+            onlyIfNewer true
+        }
+
+        download {
+            src([
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.3.0-ga1/util-taglib/src/META-INF/liferay-aui.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.3.0-ga1/util-taglib/src/META-INF/liferay-portlet-ext.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.3.0-ga1/util-taglib/src/META-INF/liferay-portlet.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.3.0-ga1/util-taglib/src/META-INF/liferay-security.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.3.0-ga1/util-taglib/src/META-INF/liferay-theme.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.3.0-ga1/util-taglib/src/META-INF/liferay-ui.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.3.0-ga1/util-taglib/src/META-INF/liferay-util.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.3.0-ga1/modules/apps/product-navigation/product-navigation-taglib/src/main/resources/META-INF/liferay-product-navigation.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.3.0-ga1/modules/apps/journal/journal-taglib/src/main/resources/META-INF/liferay-journal.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.3.0-ga1/modules/apps/flags/flags-taglib/src/main/resources/META-INF/liferay-flags.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.3.0-ga1/modules/apps/layout/layout-taglib/src/main/resources/META-INF/liferay-layout.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.3.0-ga1/modules/apps/site-navigation/site-navigation-taglib/src/main/resources/META-INF/liferay-site-navigation.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.3.0-ga1/modules/apps/asset/asset-taglib/src/main/resources/META-INF/liferay-asset.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.3.0-ga1/modules/apps/map/map-taglib/src/main/resources/META-INF/liferay-map.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.3.0-ga1/modules/apps/item-selector/item-selector-taglib/src/main/resources/META-INF/liferay-item-selector.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.3.0-ga1/modules/apps/expando/expando-taglib/src/main/resources/META-INF/liferay-expando.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.3.0-ga1/modules/apps/frontend-taglib/frontend-taglib/src/main/resources/META-INF/liferay-frontend.tld',
+                    'https://raw.githubusercontent.com/liferay/liferay-portal/7.3.0-ga1/modules/apps/trash/trash-taglib/src/main/resources/META-INF/liferay-trash.tld'
+            ])
+            dest target73
             acceptAnyCertificate true
             overwrite true
             onlyIfNewer true
