--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -6,7 +6,7 @@
 
     <vendor email="Dominik.Marks@gmx.de" url="https://github.com/dmarks2">Dominik Marks</vendor>
 
-    <idea-version since-build="181" />
+    <idea-version since-build="193" />
 
     <description><![CDATA[
         <p>This plugin adds some features for developing Liferay modules. The following topics have been improved so far</p>
@@ -36,6 +36,7 @@
             <li>Bugfix: Detecting the Liferay version not working correctly in submodules</li>
             <li>Bugfix: Resolving files relative to the content root directories in XML files using file references</li>
             <li>Bugfix: Fixed Velocity support for Liferay 7.1, 7.2 and 7.3</li>
+            <li>Change: Dropped support for IntelliJ IDEA 2019.2 or earlier</li>
         </ul>
         <p>Version 0.0.8</p>
         <ul>
@@ -220,12 +221,15 @@
         </component>
     </module-components>
 
-    <project-components>
-        <!-- Component to handle Liferay specific information on project level -->
-        <component>
-            <implementation-class>de.dm.intellij.liferay.project.LiferayProjectComponent</implementation-class>
-        </component>
-    </project-components>
+    <projectListeners>
+        <listener class="de.dm.intellij.liferay.module.LiferayModuleListener" topic="com.intellij.openapi.project.ModuleListener" />
+    </projectListeners>
+    <applicationListeners>
+        <listener class="de.dm.intellij.liferay.theme.LiferayPackageJSONParser" topic="com.intellij.openapi.vfs.newvfs.BulkFileListener" />
+        <listener class="de.dm.intellij.liferay.theme.LiferayLookAndFeelXmlParser" topic="com.intellij.openapi.vfs.newvfs.BulkFileListener" />
+        <listener class="de.dm.intellij.liferay.hook.LiferayHookXmlParser" topic="com.intellij.openapi.vfs.newvfs.BulkFileListener" />
+        <listener class="de.dm.intellij.liferay.bnd.OsgiBndFileParser" topic="com.intellij.openapi.vfs.newvfs.BulkFileListener" />
+    </applicationListeners>
 
     <actions>
         <action id="de.dm.intellij.liferay.action.ShowHookFragmentDiffAction"
