--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -2,7 +2,7 @@
     <id>de.dm.intellij.liferay</id>
     <name>Liferay</name>
     <category>Framework integration</category>
-    <version>0.0.9</version>
+    <version>0.0.10</version>
 
     <vendor email="Dominik.Marks@gmx.de" url="https://github.com/dmarks2">Dominik Marks</vendor>
 
@@ -25,6 +25,10 @@
       ]]></description>
 
     <change-notes><![CDATA[
+        <p>Version 0.0.10</p>
+        <ul>
+            <li>Bugfix: Parsing package.json may lead to an exception in the log</li>
+        </ul>
         <p>Version 0.0.9</p>
         <ul>
             <li>Feature: Added Liferay taglib support for Liferay 7.1 and 7.2 in Freemarker templates</li>
