--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,14 @@ apply plugin: 'idea'
 apply plugin: 'org.jetbrains.intellij'
 apply plugin: 'java'
 
+apply from:'https://raw.githubusercontent.com/FWDekker/intellij-randomness/master/gradle/scripts/verifier.gradle'
+
+runPluginVerifier {
+    pluginFileName = "Liferay IntelliJ Plugin-0.0.10"
+    ides = ["IC-2019.3.5"]
+    verifierVersion = "1.241"
+}
+
 sourceCompatibility = 1.8
 
 tasks.withType(JavaCompile) {
