--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -35,6 +35,7 @@
             <li>Bugfix: Fixed compatibility with IntelliJ Community Edition</li>
             <li>Bugfix: Fixed injection of Javascript inside Freemarker taglibs using the square bracket notation</li>
             <li>Bugfix: Improved compatibility with IntelliJ 2020.2</li>
+            <li>Bugfix: Fixed errors in IntelliJ log (recursive commit, index deadlock)</li>
         </ul>
         <p>Version 0.0.9</p>
         <ul>
