--- a/build.gradle
+++ b/build.gradle
@@ -76,14 +76,14 @@ intellij {
 //    version "IU-2017.3.4"
 //    version "IU-2018.1.1"
 //    version "IU-2018.3.4"
-    version "IU-2019.3.4"
+//    version "IU-2019.3.4"
+    version "IU-2020.2.1"
     type 'IU'
     pluginName 'Liferay IntelliJ Plugin'
     plugins = [
-            'JavaScriptLanguage', 'Tomcat', 'Velocity', 'FreeMarker', 'maven', 'properties', 'java-i18n', 'CSS', 'sass', 'JavaEE', 'jsp', 'gradle', 'de.dm.intellij.maven-archetypes-catalog-plugin:1.2.5',
+            'JavaScriptLanguage', 'Tomcat', 'Velocity', 'FreeMarker', 'maven', 'properties', 'java-i18n', 'CSS', 'sass', 'JavaEE', 'Web', 'jsp', 'gradle', 'de.dm.intellij.maven-archetypes-catalog-plugin:1.2.5',
             'IntelliLang', 'uml', 'java',
             //test only?
-            'osmorc',
             'Groovy', 'junit', 'PersistenceSupport', 'DatabaseTools'
     ]
     updateSinceUntilBuild false
