--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -28,6 +28,7 @@
         <p>Version 0.0.11</p>
         <ul>
             <li>Feature: Implicit usage of some property files and keys ("javax.portlet.title." or "liferay.workspace."), so that they are no longer shown as "unused property"</li>
+            <li>Bugfix: OSGi property code completion for single properties, e.g. without brackets around</li>
         </ul>
         <p>Version 0.0.10</p>
         <ul>
