--- a/build.gradle
+++ b/build.gradle
@@ -69,8 +69,9 @@ intellij {
 //    version "IU-2018.1.1"
 //    version "IU-2018.3.4"
 //    version "IU-2019.3.4"
-    version "IU-2020.2.1"
+//    version "IU-2020.2.1"
 //    version "IU-2020.3"
+    version "IU-2021.1"
     type 'IU'
     pluginName 'Liferay IntelliJ Plugin'
     plugins = [
